# lnxdrive

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: audit.toml
.devtrail/07-ai-audit/agent-logs/: AILOG-2026-02-03-001-implement-sync-item-entity.md  AILOG-2026-02-03-002-create-usecase-layer.md  AILOG-2026-02-03-002-implement-config-module.md  AILOG-2026-02-03-003-implement-sqlite-repository.md  AILOG-2026-02-03-005-implement-cli-auth-commands-output.md  AILOG-2026-02-03-006-implement-graph-auth-client.md  AILOG-2026-02-03-007-implement-download-upload-operations.md  AILOG-2026-02-03-007-implement-graph-delta-api.md  AILOG-2026-02-03-007-implement-local-filesystem-adapter.md  AILOG-2026-02-03-008-implement-sync-engine-graph-provider.md  AILOG-2026-02-03-009-implement-cli-sync-command.md  AILOG-2026-02-03-010-implement-rate-limiting.md  AILOG-2026-02-03-011-implement-phases-5-11.md  AILOG-2026-02-04-001-implement-container-functional-testing.md  AILOG-2026-02-04-002-complete-phases-0-1.md  AILOG-2026-02-04-003-create-fuse-migration.md  AILOG-2026-02-05-001-implement-inode-entry.md  AILOG-2026-02-05-002-add-inodetable-tests.md  AILOG-2026-02-05-003-implement-mount-unmount.md  AILOG-2026-02-05-004-implement-cli-mount-commands.md  AILOG-2026-02-05-005-implement-lnxdrivefs-struct.md  AILOG-2026-02-05-006-implement-fuse-metadata-ops.md  AILOG-2026-02-05-007-implement-fuse-directory-ops.md  AILOG-2026-02-05-008-implement-stage2-foundational.md  AILOG-2026-02-05-009-implement-download-url-streaming.md  AILOG-2026-02-05-009-implement-stage4-hydration.md  AILOG-2026-02-05-010-implement-fuse-file-operations.md  AILOG-2026-02-05-010-implement-stage5-write-operations.md  AILOG-2026-02-05-011-implement-fuse-rename.md  AILOG-2026-02-05-011-implement-stage6-pin-unpin.md  AILOG-2026-02-05-012-implement-stage7-dehydration.md  AILOG-2026-02-05-013-implement-stage8-xattr.md  AILOG-2026-02-05-014-implement-stage8-9.md  AILOG-2026-02-05-015-implement-stage10-polish.md  AILOG-2026-02-05-016-implement-t086-dehydration-lifecycle.md  AILOG-2026-02-05-017-verify-functional-requirements.md  AILOG-2026-02-05-018-validate-quickstart.md  AILOG-2026-02-07-001-implement-conflict-detection-resolution-engine.md  AILOG-2026-02-07-001-implement-files-dbus-interface.md  AILOG-2026-02-07-002-implement-sync-status-auth-settings-manager-interfaces.md  (+6 more)
.github/workflows/: ci.yml
.specify/memory/: constitution.md
config/: com.enigmora.LNXDrive.service  default-config.yaml  lnxdrive-autostart.desktop  lnxdrive.service
crates/lnxdrive-audit/: Cargo.toml
crates/lnxdrive-audit/src/: lib.rs  logger.rs  reason.rs
crates/lnxdrive-audit/tests/: integration_test.rs
crates/lnxdrive-cache/: Cargo.toml
crates/lnxdrive-cache/src/: lib.rs  pool.rs  repository.rs
crates/lnxdrive-cache/src/migrations/: 20260203_initial.sql  20260204_fuse_support.sql
crates/lnxdrive-cache/tests/: repository_tests.rs
crates/lnxdrive-cli/: Cargo.toml
crates/lnxdrive-cli/src/: main.rs  output.rs
crates/lnxdrive-cli/src/commands/: audit.rs  auth.rs  completions.rs  config.rs  conflicts.rs  daemon.rs  explain.rs  hydrate.rs  mod.rs  mount.rs  pin.rs  report.rs  status.rs  sync.rs
crates/lnxdrive-conflict/: Cargo.toml
crates/lnxdrive-conflict/src/: detector.rs  diff.rs  error.rs  lib.rs  namer.rs  policy.rs  resolver.rs  use_cases.rs
crates/lnxdrive-core/: Cargo.toml
crates/lnxdrive-core/src/: config.rs  lib.rs
crates/lnxdrive-core/src/domain/: account.rs  audit.rs  conflict.rs  errors.rs  mod.rs  newtypes.rs  session.rs  sync_item.rs
crates/lnxdrive-core/src/ports/: cloud_provider.rs  local_filesystem.rs  mod.rs  notification.rs  state_repository.rs
crates/lnxdrive-core/src/usecases/: authenticate.rs  explain_failure.rs  mod.rs  query_delta.rs  sync_file.rs
crates/lnxdrive-daemon/: Cargo.toml
crates/lnxdrive-daemon/src/: main.rs
crates/lnxdrive-fuse/: Cargo.toml
crates/lnxdrive-fuse/src/: cache.rs  dehydration.rs  error.rs  filesystem.rs  hydration.rs  inode.rs  inode_entry.rs  lib.rs  write_serializer.rs  xattr.rs
crates/lnxdrive-graph/: Cargo.toml
crates/lnxdrive-graph/src/: auth.rs  client.rs  delta.rs  lib.rs  provider.rs  rate_limit.rs  upload.rs
crates/lnxdrive-graph/tests/integration/: common.rs  main.rs  test_delta.rs  test_sync_operations.rs  test_user_info.rs
crates/lnxdrive-ipc/: Cargo.toml
crates/lnxdrive-ipc/src/: lib.rs  service.rs
crates/lnxdrive-sync/: Cargo.toml
crates/lnxdrive-sync/src/: engine.rs  filesystem.rs  lib.rs  scheduler.rs  watcher.rs
crates/lnxdrive-telemetry/: Cargo.toml
crates/lnxdrive-telemetry/src/: anonymizer.rs  crash_report.rs  error_report.rs  lib.rs  metrics.rs  os_info.rs  server.rs  store.rs
docker/: Containerfile.systemd
docs/: FUNCTIONAL-TESTING.md
lnxdrive-guide/: EXTEND_CLAUDE.md
scripts/: test-daemon-functional.sh
specs/001-core-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-cli/checklists/: requirements.md
specs/001-core-cli/contracts/: cli-commands.md  dbus-interface.xml
specs/002-files-on-demand/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-files-on-demand/checklists/: requirements.md
specs/002-files-on-demand/contracts/: cli-commands.md  fuse-operations.md
