[workspace]
resolver = "2"
members = [
    "crates/lnxdrive-core",
    "crates/lnxdrive-daemon",
    "crates/lnxdrive-cli",
    "crates/lnxdrive-ipc",
    "crates/lnxdrive-fuse",
    "crates/lnxdrive-sync",
    "crates/lnxdrive-graph",
    "crates/lnxdrive-cache",
    "crates/lnxdrive-conflict",
    "crates/lnxdrive-audit",
    "crates/lnxdrive-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Enigmora <contact@enigmora.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/enigmora/lnxdrive"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# D-Bus
zbus = "4.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# OAuth2
oauth2 = "4.4"

# FUSE
fuser = "0.14"

# Rate limiting
governor = "0.6"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Workspace crates
lnxdrive-core = { path = "crates/lnxdrive-core" }
lnxdrive-ipc = { path = "crates/lnxdrive-ipc" }
lnxdrive-fuse = { path = "crates/lnxdrive-fuse" }
lnxdrive-sync = { path = "crates/lnxdrive-sync" }
lnxdrive-graph = { path = "crates/lnxdrive-graph" }
lnxdrive-cache = { path = "crates/lnxdrive-cache" }
lnxdrive-conflict = { path = "crates/lnxdrive-conflict" }
lnxdrive-audit = { path = "crates/lnxdrive-audit" }
lnxdrive-telemetry = { path = "crates/lnxdrive-telemetry" }
