[package]
name = "lnxdrive-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Audit and structured logging for LNXDrive"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
