[package]
name = "lnxdrive-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Local state cache for LNXDrive"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
