[package]
name = "lnxdrive-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Local state cache for LNXDrive"

[dependencies]
lnxdrive-core.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
