[package]
name = "lnxdrive-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LNXDrive command-line interface"

[[bin]]
name = "lnxdrive"
path = "src/main.rs"

[dependencies]
lnxdrive-ipc.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
