[package]
name = "lnxdrive-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LNXDrive command-line interface"

[[bin]]
name = "lnxdrive"
path = "src/main.rs"

[dependencies]
lnxdrive-core.workspace = true
lnxdrive-conflict.workspace = true
lnxdrive-graph.workspace = true
lnxdrive-sync.workspace = true
lnxdrive-cache.workspace = true
lnxdrive-fuse.workspace = true
fuser.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
clap_complete = "4.4"
dirs = "5.0"
glob = "0.3"

[dev-dependencies]
tempfile.workspace = true
