[package]
name = "lnxdrive-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core domain logic for LNXDrive"

[dependencies]
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
anyhow.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
