[package]
name = "lnxdrive-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LNXDrive background synchronization daemon"

[[bin]]
name = "lnxdrived"
path = "src/main.rs"

[dependencies]
lnxdrive-core.workspace = true
lnxdrive-sync.workspace = true
lnxdrive-ipc.workspace = true
lnxdrive-cache.workspace = true
lnxdrive-graph.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
dirs = "5.0"
