[package]
name = "lnxdrive-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Microsoft Graph API client for LNXDrive"

[dependencies]
reqwest.workspace = true
oauth2.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
