[package]
name = "lnxdrive-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Microsoft Graph API client for LNXDrive"

[dependencies]
lnxdrive-core.workspace = true
reqwest.workspace = true
oauth2.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
keyring.workspace = true
tracing.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
webbrowser.workspace = true
chrono.workspace = true
async-trait.workspace = true
url = "2.5"

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true
