[package]
name = "lnxdrive-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "D-Bus IPC library for LNXDrive clients"

[dependencies]
lnxdrive-core.workspace = true
lnxdrive-conflict.workspace = true
lnxdrive-cache.workspace = true
lnxdrive-telemetry.workspace = true
chrono.workspace = true
zbus.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
