[package]
name = "lnxdrive-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Delta synchronization engine for LNXDrive"

[dependencies]
lnxdrive-core.workspace = true
lnxdrive-graph.workspace = true
lnxdrive-cache.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
governor.workspace = true
