[package]
name = "lnxdrive-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Delta synchronization engine for LNXDrive"

[dependencies]
lnxdrive-core.workspace = true
lnxdrive-conflict.workspace = true
lnxdrive-audit.workspace = true
lnxdrive-telemetry.workspace = true
notify.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
base64 = "0.22"
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
