[package]
name = "lnxdrive-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Opt-in telemetry agent for LNXDrive"

[dependencies]
lnxdrive-core.workspace = true
prometheus.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile.workspace = true
